# amserver

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs  map.txt  the_patrol_ambush_data.csv
src/kafka_am/: consumer.rs  producer.rs
