[package]
name = "amserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
csv = "1.1.6"
kafka = "0.9.0"
iyes_loopless = "0.9.1"
bevy_quinnet = "0.2.0"
serde = "1.0.152"
gridly = "0.9.0"
gridly_grids = "0.5.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1